# cotc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ability.cc  ability.hh  actor.hh  brains.cc  build.sh  common.cc  common.hh  console.hh  content.markdown  example.cpp  generate-version.sh  generator.cc  index.html  logger.hh  main.cc  make.sh  rlutil.h  screens.hh  template.html  world.cc  world.hh
